<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainMain"
    android:background="@color/black_may"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"

        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/hello"
            android:textColor="@color/blue_may"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/maksim"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textHello"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            app:menu="@menu/help_menu"
            android:layout_width="50dp"

            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="13dp"

            app:layout_constraintBottom_toBottomOf="@+id/textHello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textHello">

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_rectangle_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myToolbar">

            <EditText
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search_element"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/braun_may"
                android:textSize="12sp"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/search_24"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                app:srcCompat="@drawable/search_24"
                app:tint="@color/braun_may" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutwhisBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonCreate"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="100dp"
                    android:background="@drawable/button_add"


                    android:fontFamily="@font/nanumothic"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/vMenu"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="100dp"
                    android:background="@drawable/button_add"
                    android:fontFamily="@font/nanumothic"


                    android:onClick="buttonRecept"
                    android:text="@string/gotovoe"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </FrameLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/trending_background"

        app:itemIconSize="40dp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"

        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="@+id/constrainMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:menu="@menu/navigation_menu" />

    <HorizontalScrollView
        android:id="@+id/horizontalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:layout_constraintBottom_toTopOf="@+id/layoutwhisBottom"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/header_background">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sky" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sky"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sky"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sky"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sky"
                />


        </LinearLayout>


    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

